--- a/cards/basement/staircase/basement-staircase-advanced.yaml
+++ b/cards/basement/staircase/basement-staircase-advanced.yaml
@@ -99,6 +99,118 @@ cards:
     rows: 3.45
   - type: markdown
     content: |
+      ## Inovelli Parameters
+
+  - type: custom:bubble-card
+    card_type: sub-buttons
+    show_header_toggle: false
+    sub_button:
+      main: []
+      bottom:
+        - name: Upper mmWave — Detection
+          buttons_layout: inline
+          group:
+            - entity: select.basement_upper_staircase_inovelli_presence_mmwavedetectsensitivity
+              sub_button_type: select
+              name: Sensitivity
+              icon: mdi:radar
+              show_name: false
+              show_state: true
+              content_layout: icon-left
+              custom_height: 60
+            - entity: select.basement_upper_staircase_inovelli_presence_mmwavedetecttrigger
+              sub_button_type: select
+              name: Trigger Delay
+              icon: mdi:timer-outline
+              show_name: false
+              show_state: true
+              content_layout: icon-left
+              custom_height: 60
+        - name: Upper Switch Modes
+          buttons_layout: inline
+          group:
+            - entity: select.basement_upper_staircase_inovelli_presence_outputmode
+              icon: mdi:light-switch
+              show_icon: true
+              show_state: true
+              show_name: false
+              content_layout: icon-left
+              custom_height: 60
+              tap_action:
+                action: none
+              hold_action:
+                action: none
+              double_tap_action:
+                action: none
+              sub_button_type: default
+            - entity: select.basement_upper_staircase_inovelli_presence_smartbulbmode
+              icon: mdi:lightbulb-outline
+              show_icon: true
+              show_state: true
+              show_name: false
+              content_layout: icon-left
+              custom_height: 60
+              tap_action:
+                action: none
+              hold_action:
+                action: none
+              double_tap_action:
+                action: none
+              sub_button_type: default
+        - name: Lower mmWave — Detection
+          buttons_layout: inline
+          group:
+            - entity: select.basement_lower_staircase_inovelli_presence_mmwavedetectsensitivity
+              sub_button_type: select
+              name: Sensitivity
+              icon: mdi:radar
+              show_name: false
+              show_state: true
+              content_layout: icon-left
+              custom_height: 60
+            - entity: select.basement_lower_staircase_inovelli_presence_mmwavedetecttrigger
+              sub_button_type: select
+              name: Trigger Delay
+              icon: mdi:timer-outline
+              show_name: false
+              show_state: true
+              content_layout: icon-left
+              custom_height: 60
+        - name: Lower Switch Modes
+          buttons_layout: inline
+          group:
+            - entity: select.basement_lower_staircase_inovelli_presence_outputmode
+              icon: mdi:light-switch
+              show_icon: true
+              show_state: true
+              show_name: false
+              content_layout: icon-left
+              custom_height: 60
+              tap_action:
+                action: none
+              hold_action:
+                action: none
+              double_tap_action:
+                action: none
+              sub_button_type: default
+            - entity: select.basement_lower_staircase_inovelli_presence_smartbulbmode
+              icon: mdi:lightbulb-outline
+              show_icon: true
+              show_state: true
+              show_name: false
+              content_layout: icon-left
+              custom_height: 60
+              tap_action:
+                action: none
+              hold_action:
+                action: none
+              double_tap_action:
+                action: none
+              sub_button_type: default
+      bottom_layout: rows
+    rows: 4.5
+  - type: markdown
+    content: |
       #### Upper Staircase mmWave Clear Timing
   - type: grid
     columns: 2
