--- a/scripts/inovelli/entities-defined/clear_hold_on_all_inovelli_presence_controlled_switches.yaml
+++ b/scripts/inovelli/entities-defined/clear_hold_on_all_inovelli_presence_controlled_switches.yaml
@@ -51,6 +51,8 @@ sequence:
         - switch_name: downstairs_bathroom_vanity_inovelli_presence
           helper: input_text.downstairs_bathroom_vanity_led_color
           normal_mode_input_select: input_select.downstairs_bathroom_vanity_mmwave_normal_mode
+          automation_entity_ids:
+            - automation.light_inovelli_downstairs_bathroom_motion_cleared_non_vanity_lights_off
         - switch_name: downstairs_mudroom_inovelli_presence
           helper: input_text.downstairs_mudroom_led_color
           normal_mode_input_select: input_select.downstairs_mudroom_mmwave_normal_mode
