--- a/scripts/inovelli/entities-defined/hold_all_inovelli_presence_controlled_switches.yaml
+++ b/scripts/inovelli/entities-defined/hold_all_inovelli_presence_controlled_switches.yaml
@@ -41,6 +41,8 @@ sequence:
             - automation.light_snzb_06p_rumpus_room_motion_cleared_lights_off
         - switch_name: downstairs_bathroom_vanity_inovelli_presence
           helper: input_text.downstairs_bathroom_vanity_led_color
+          automation_entity_ids:
+            - automation.light_inovelli_downstairs_bathroom_motion_cleared_non_vanity_lights_off
         - switch_name: downstairs_mudroom_inovelli_presence
           helper: input_text.downstairs_mudroom_led_color
           automation_entity_ids:
