--- a/cards/downstairs/bathroom-vanity/downstairs-bathroom-vanity-history.yaml
+++ b/cards/downstairs/bathroom-vanity/downstairs-bathroom-vanity-history.yaml
@@ -57,6 +57,16 @@ cards:
               scrolling_effect: false
               content_layout: icon-left
               custom_height: 60
+            - entity: input_select.downstairs_bathroom_occupancy_off_delay
+              sub_button_type: select
+              name: Off Delay
+              icon: mdi:timer-outline
+              show_name: true
+              show_state: true
+              show_attribute: false
+              scrolling_effect: false
+              content_layout: icon-left
+              custom_height: 60
       bottom_layout: rows
     rows: 2.4
     modules:
@@ -98,6 +108,26 @@ cards:
       LED ON Colors (1–7): {{ on_vals.out }}
       LED OFF Colors (1–7): {{ off_vals.out }}
 
+  - type: custom:bubble-card
+    card_type: sub-buttons
+    sub_button:
+      main: []
+      bottom:
+        - name: Automations
+          buttons_layout: inline
+          group:
+            - entity: automation.light_inovelli_downstairs_bathroom_motion_cleared_non_vanity_lights_off
+              name: Motion → Non-Vanity Off
+              show_name: true
+              show_state: true
+              content_layout: icon-top
+              custom_height: 60
+      bottom_layout: rows
+    rows: 1.3
+    modules:
+      - my_module
+    show_header_toggle: false
+
   - type: custom:mod-card
     card:
       type: entities
@@ -131,6 +161,8 @@ cards:
                   normal_mode_input_select: input_select.downstairs_bathroom_vanity_mmwave_normal_mode
                   hold_color: input_text.inovelli_manual_hold
                   prev_led_color_helper: input_text.downstairs_bathroom_vanity_led_color
+                  automation_entity_ids:
+                    - automation.light_inovelli_downstairs_bathroom_motion_cleared_non_vanity_lights_off
               entity: script.inovelli_toggle_mmwave_hold_led_indicator
               show_state: false
               show_name: true
@@ -151,6 +183,8 @@ cards:
                   switch_name: downstairs_bathroom_vanity_inovelli_presence
                   hold_color: input_text.inovelli_auto_hold
                   prev_led_color_helper: input_text.downstairs_bathroom_vanity_led_color
+                  automation_entity_ids:
+                    - automation.light_inovelli_downstairs_bathroom_motion_cleared_non_vanity_lights_off
               content_layout: icon-top
               custom_height: 80
               scrolling_effect: false
@@ -170,6 +204,8 @@ cards:
                   normal_mode_input_select: input_select.downstairs_bathroom_vanity_mmwave_normal_mode
                   hold_color: input_text.inovelli_auto_hold
                   prev_led_color_helper: input_text.downstairs_bathroom_vanity_led_color
+                  automation_entity_ids:
+                    - automation.light_inovelli_downstairs_bathroom_motion_cleared_non_vanity_lights_off
               content_layout: icon-top
               custom_height: 80
             - entity: script.inovelli_set_led_1_7_color_from_input_text
